# async-django-demo

./: .gitignore  README.md  build.sh  install.sh  manage.py  pyproject.toml  render.yaml  requirements.txt
api_post/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
api_post/migrations/: 0001_initial.py
app/: urls.py  views.py
app/migrations/: 0001_initial.py  0002_delete_post.py
app/static/: create.css  destroyPost.js  list.css  main.css
app/templates/: create.html  list.html  main.html
async_django_demo/: asgi.py  settings.py  urls.py  wsgi.py
